[gd_scene load_steps=33 format=2]

[ext_resource path="res://scenes/Ending.gd" type="Script" id=1]
[ext_resource path="res://assets/ending/bbehind1.png" type="Texture" id=2]
[ext_resource path="res://assets/ending/bbehind2.png" type="Texture" id=3]
[ext_resource path="res://assets/ending/bbehind3.png" type="Texture" id=4]
[ext_resource path="res://assets/ending/bbehind4.png" type="Texture" id=5]
[ext_resource path="res://assets/ending/bbbbehind.png" type="Texture" id=6]
[ext_resource path="res://assets/ending/behind1.png" type="Texture" id=7]
[ext_resource path="res://assets/ending/behind2.png" type="Texture" id=8]
[ext_resource path="res://assets/ending/behind3.png" type="Texture" id=9]
[ext_resource path="res://assets/ending/behind4.png" type="Texture" id=10]
[ext_resource path="res://assets/ending/Lportal1.png" type="Texture" id=11]
[ext_resource path="res://assets/ending/Lportal2.png" type="Texture" id=12]
[ext_resource path="res://assets/ending/Lportal3.png" type="Texture" id=13]
[ext_resource path="res://assets/ending/Lportal4.png" type="Texture" id=14]
[ext_resource path="res://assets/ending/Lportal5.png" type="Texture" id=15]
[ext_resource path="res://assets/ending/Lportal6.png" type="Texture" id=16]
[ext_resource path="res://assets/ending/Rportal1.png" type="Texture" id=17]
[ext_resource path="res://assets/ending/Rportal2.png" type="Texture" id=18]
[ext_resource path="res://assets/ending/Rportal3.png" type="Texture" id=19]
[ext_resource path="res://assets/ending/Rportal4.png" type="Texture" id=20]
[ext_resource path="res://assets/ending/Rportal5.png" type="Texture" id=21]
[ext_resource path="res://assets/ending/Rportal6.png" type="Texture" id=22]
[ext_resource path="res://CRT_Shader.tscn" type="PackedScene" id=23]
[ext_resource path="res://assets/sounds/enderman.wav" type="AudioStream" id=24]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 15.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 15.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ) ],
"loop": true,
"name": "default",
"speed": 15.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ) ],
"loop": true,
"name": "default",
"speed": 15.0
} ]

[sub_resource type="Animation" id=5]
resource_name = "Portal"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("RGraphs:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LGraphs:frame")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="LineShape2D" id=6]
normal = Vector2( -0.996956, 0.0779692 )
d = 1362.13

[sub_resource type="LineShape2D" id=7]
normal = Vector2( -1, 0 )
d = 3000.0

[sub_resource type="LineShape2D" id=8]
normal = Vector2( -0.997493, 0.0707582 )
d = 243.4

[node name="Ending" type="Node2D"]
script = ExtResource( 1 )

[node name="Portal" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="BBehind" type="AnimatedSprite" parent="Portal"]
position = Vector2( 815.75, 2.47076 )
z_index = 6
frames = SubResource( 1 )
frame = 1
playing = true

[node name="TheEnd2" type="Sprite" parent="Portal"]
position = Vector2( 1669.38, -73.9738 )
texture = ExtResource( 6 )

[node name="TheEnd3" type="Sprite" parent="Portal"]
position = Vector2( -362.491, -1271.42 )
texture = ExtResource( 6 )

[node name="TheEnd" type="Sprite" parent="Portal"]
position = Vector2( 1667.68, -899.063 )
z_index = 8
texture = ExtResource( 6 )

[node name="Behind" type="AnimatedSprite" parent="Portal"]
position = Vector2( -367.779, -78.4017 )
frames = SubResource( 2 )
playing = true

[node name="LGraphs" type="AnimatedSprite" parent="Portal"]
frames = SubResource( 3 )
frame = 5

[node name="RGraphs" type="AnimatedSprite" parent="Portal"]
position = Vector2( -0.76, -0.47 )
z_index = 7
frames = SubResource( 4 )
frame = 5

[node name="CRT_Shader_Control" parent="Portal" instance=ExtResource( 23 )]
margin_left = -41.0
margin_top = -67.0
margin_right = 18.0
margin_bottom = 40.0

[node name="AnimePortal" type="AnimationPlayer" parent="Portal"]
autoplay = "Portal"
playback_speed = 10.0
anims/Portal = SubResource( 5 )

[node name="PinJoint2D" type="PinJoint2D" parent="."]
position = Vector2( 1833.88, -1016.45 )

[node name="Finishing" type="Area2D" parent="."]
editor/display_folded = true

[node name="Trigger" type="CollisionShape2D" parent="Finishing"]
shape = SubResource( 6 )

[node name="PortalSound" type="Area2D" parent="."]

[node name="Trigger" type="CollisionShape2D" parent="PortalSound"]
shape = SubResource( 7 )

[node name="Sound" type="AudioStreamPlayer2D" parent="PortalSound"]
stream = ExtResource( 24 )
volume_db = 5.0

[node name="Credits" type="Area2D" parent="."]

[node name="Trigger" type="CollisionShape2D" parent="Credits"]
position = Vector2( 350, 0 )
z_index = 10
shape = SubResource( 8 )
[connection signal="body_entered" from="Finishing" to="." method="_on_Finishing_body_entered"]
[connection signal="body_entered" from="PortalSound" to="." method="_on_PortalSound_body_entered"]
[connection signal="body_entered" from="Credits" to="." method="_on_Credits_body_entered"]
